добавлен readme и хелпер